header画像にした

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
 <body>
   <div class="header">
-    <div class="headerinner">
+    <img src="img/pc_img/pc_head.svg" alt="「HOW TO WEAR BY SIZE.　秋のトレンド、どう着こなす？ 身長別スタイリング術」Tallモデルイメージ、Shortモデルイメージ" class="pcimg　pchead">
+     <img src="img/sp_img/sp_head.svg" alt="「HOW TO WEAR BY SIZE.　秋のトレンド、どう着こなす？ 身長別スタイリング術」Tallモデルイメージ、Shortモデルイメージ" class="spimg sphead"> 
+     <!-- <div class="headerinner">
       <img src="img/sp_img/head.png" alt="" class="sp_headimg">
       <img src="img/pc_img/head01.png" alt="Tall" class="pc_headimg01">
       <img src="img/pc_img/head02.png" alt="Short" class="pc_headimg02">
@@ -28,7 +30,7 @@
     <h3 class="sp_headh3 pc_headh3 yu_go">同じアイテムでも、身長によって当然、見え方は違ってくるもの。<br>
       だからといって、身長が高いから、 <br class="spbr"> 身長が低いから似合わない…とあきらめていませんか？<br>
       身長に関係なく素敵に着こなせる方法を、<br class="spbr"> アイテム別に徹底比較。<br>
-      好みやトレンドによって好きなものを<br class="spbr">好きなように着こなすためのコツをご紹介します。</h3>
+      好みやトレンドによって好きなものを<br class="spbr">好きなように着こなすためのコツをご紹介します。</h3> -->
   </div>
 
   <div class="section">
