slick入れた画像が中央によらない

--- a/index.html
+++ b/index.html
@@ -16,56 +16,57 @@
 
 <body>
   <div class="header">
-    <img src="img/pc_img/pc_head.svg" alt="「HOW TO WEAR BY SIZE.　秋のトレンド、どう着こなす？ 身長別スタイリング術」Tallモデルイメージ、Shortモデルイメージ" class="pcimg　pchead">
-     <img src="img/sp_img/sp_head.svg" alt="「HOW TO WEAR BY SIZE.　秋のトレンド、どう着こなす？ 身長別スタイリング術」Tallモデルイメージ、Shortモデルイメージ" class="spimg sphead"> 
-     <!-- <div class="headerinner">
-      <img src="img/sp_img/head.png" alt="" class="sp_headimg">
-      <img src="img/pc_img/head01.png" alt="Tall" class="pc_headimg01">
-      <img src="img/pc_img/head02.png" alt="Short" class="pc_headimg02">
-      <p class="head1p roboto">Tall</p>
-      <p class="head2p roboto">Short</p>
+    <div class="headimg">
+      <img src="img/pc_img/pc_head.svg" alt="「HOW TO WEAR BY SIZE.　秋のトレンド、どう着こなす？ 身長別スタイリング術」Tallモデルイメージ、Shortモデルイメージ"
+        class="pcimg pchead">
+      <img src="img/sp_img/sp_head.svg" alt="「HOW TO WEAR BY SIZE.　秋のトレンド、どう着こなす？ 身長別スタイリング術」Tallモデルイメージ、Shortモデルイメージ"
+        class="spimg sphead">
     </div>
-    <h1 class="sp_headh1 pc_headh1 roboto">HOW TO WEAR<br class="pcbr"> BY SIZE.</h1>
-    <h2 class="sp_headh2 pc_headh2 yu_go">秋のトレンド、どう着こなす？<br>身長別スタイリング術</h2>
-    <h3 class="sp_headh3 pc_headh3 yu_go">同じアイテムでも、身長によって当然、見え方は違ってくるもの。<br>
+    <h1 class="headh1 yu_go">
+      同じアイテムでも、身長によって当然、見え方は違ってくるもの。<br>
       だからといって、身長が高いから、 <br class="spbr"> 身長が低いから似合わない…とあきらめていませんか？<br>
       身長に関係なく素敵に着こなせる方法を、<br class="spbr"> アイテム別に徹底比較。<br>
-      好みやトレンドによって好きなものを<br class="spbr">好きなように着こなすためのコツをご紹介します。</h3> -->
+      好みやトレンドによって好きなものを<br class="spbr">好きなように着こなすためのコツをご紹介します。
+    </h1>
   </div>
 
-  <div class="section">
-    <h1 class="sp_sech1 pc_sech1 roboto">
+  <div class="section_midasi">
+    <h1 class="sech1 roboto">
       French Short Down
     </h1>
-    <img src="img/sp_img/img03.jpg" alt="French Short Down" class="sp_img03 sp_sec_huku">
-    <img src="img/pc_img/img03.jpg" alt="French Short Down" class="pc_img03 pc_sec_huku">
+    <img src="img/sp_img/img03.jpg" alt="French Short Down" class="sp_img03 spimg">
+    <img src="img/pc_img/img03.jpg" alt="French Short Down" class="pc_img03 pcimg">
     <p class="secp yu_go">
       「SNIDEL」人気のダウンジャケットは、<br>
       丸みのある柔らかなフォルムと<br class="spbr">オーバーサイズで女性らしい仕上がりに。<br>
       トレンドのショート丈でデザインしたダウンは、<br class="spbr">品の良さとカジュアルさを両立。<br>
       サイドのドローストリングでシルエットの変化が楽しめる。
     </p>
+  </div>
 
-    <div class="sec_tall">
-      <ul class="slide sp_slide">
-        <li>
-          <img src="img/sp_img/img04.png" alt="French Short Down167㎝着用イメージ1" class="sp_img04 sec1_tall_img">
-        </li>
-        <li>
-          <img src="img/sp_img/img05.png" alt="French Short Down167㎝着用イメージ2" class="sp_img05 sec1_tall_img">
-        </li>
-      </ul>
-      <ul class="slide pc_slide">
-        <li>
-          <img src="img/pc_img/img04.png" alt="French Short Down167㎝着用イメージ1" class="pc_img04 sec1_tall_img">
-        </li>
-        <li>
-          <img src="img/pc_img/img05.png" alt="French Short Down167㎝着用イメージ2" class="pc_img05 sec1_tall_img">
-        </li>
-      </ul>
-      <div class="slidemidasi_tall">
-        <p class="tallmidasi roboto">Tall <span class="cm roboto">167cm</span></p>
-        <p class="size roboto">SIZE F</p>
+  <div class="section_model">
+    <div class="tall">
+      <div class="modelimg">
+        <ul class="slide sp_slide">
+          <li>
+            <img src="img/sp_img/img04.png" alt="French Short Down167㎝着用イメージ1" class="spimg sp_img04">
+          </li>
+          <li>
+            <img src="img/sp_img/img05.png" alt="French Short Down167㎝着用イメージ2" class="spimg sp_img05">
+          </li>
+        </ul>
+        <ul class="slide pc_slide">
+          <li>
+            <img src="img/pc_img/img04.png" alt="French Short Down167㎝着用イメージ1" class="pcimg pc_img04">
+          </li>
+          <li>
+            <img src="img/pc_img/img05.png" alt="French Short Down167㎝着用イメージ2" class="pcimg pc_img05">
+          </li>
+        </ul>
+        <div class="slidemidasi_tall">
+          <p class="tallmidasi roboto">Tall <span class="cm roboto">167cm</span></p>
+          <p class="size roboto">SIZE F</p>
+        </div>
       </div>
       <div class="descri">
         <p class="setumei yu_go">
@@ -81,7 +82,7 @@
       </div>
     </div>
 
-    <div class="sec_short">
+    <div class="short">
       <ul class="slide sp_slide">
         <li>
           <img src="img/sp_img/img06.png" alt="French Short Down152㎝着用イメージ1" class="sp_img06 sec1_tall_img">
@@ -114,6 +115,7 @@
       </div>
     </div>
   </div>
+
 
 
 
