spヘッダーと型できた

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <div class="section_model">
     <div class="tall">
-      <div class="modelimg">
+      <div class="modelimg_tall">
         <ul class="slide sp_slide">
           <li>
             <img src="img/sp_img/img04.png" alt="French Short Down167㎝着用イメージ1" class="spimg sp_img04">
@@ -70,8 +70,7 @@
       </div>
       <div class="descri">
         <p class="setumei yu_go">
-          高身長さんはボリュームのあるダウンジャケット×フレアな<br class="spbr">A<br class="pcbr">ラインも、好バランスで着こなせる。全体的に同じトーンで<br class="spbr">合<br
-            class="pcbr">わせ、今年っぽくこなれ感を演出。
+          高身長さんはボリュームのあるダウンジャケット×フレアなA<br class="pcbr">ラインも、好バランスで着こなせる。全体的に同じトーンで合<br class="pcbr">わせ、今年っぽくこなれ感を演出。
         </p>
         <p class="price roboto">
           <span class="price_span">Coat 19,800yen+tax</span>
@@ -83,29 +82,31 @@
     </div>
 
     <div class="short">
-      <ul class="slide sp_slide">
-        <li>
-          <img src="img/sp_img/img06.png" alt="French Short Down152㎝着用イメージ1" class="sp_img06 sec1_tall_img">
-        </li>
-        <li>
-          <img src="img/sp_img/img07.png" alt="French Short Down152㎝着用イメージ2" class="sp_img07 sec1_tall_img">
-        </li>
-      </ul>
-      <ul class="slide pc_slide">
-        <li>
-          <img src="img/pc_img/img06.png" alt="French Short Down152㎝着用イメージ1" class="pc_img06 sec1_tall_img">
-        </li>
-        <li>
-          <img src="img/pc_img/img07.png" alt="French Short Down152㎝着用イメージ2" class="pc_img07 sec1_tall_img">
-        </li>
-      </ul>
-      <div class="slidemidasi_short">
-        <p class="shortmidasi roboto">Short <span class="cm roboto">152cm</span></p>
-        <p class="size_short roboto">SIZE F</p>
+      <div class="modelimg_short">
+        <ul class="slide sp_slide">
+          <li>
+            <img src="img/sp_img/img06.png" alt="French Short Down152㎝着用イメージ1" class="spimg sp_img06">
+          </li>
+          <li>
+            <img src="img/sp_img/img07.png" alt="French Short Down152㎝着用イメージ2" class="spimg sp_img07">
+          </li>
+        </ul>
+        <ul class="slide pc_slide">
+          <li>
+            <img src="img/pc_img/img06.png" alt="French Short Down152㎝着用イメージ1" class="pcimg pc_img06">
+          </li>
+          <li>
+            <img src="img/pc_img/img07.png" alt="French Short Down152㎝着用イメージ2" class="pcimg pc_img07">
+          </li>
+        </ul>
+        <div class="slidemidasi_short">
+          <p class="shortmidasi roboto">Short <span class="cm roboto">152cm</span></p>
+          <p class="size_short roboto">SIZE F</p>
+        </div>
       </div>
       <div class="descri">
         <p class="setumei yu_go">
-          ビッグシルエットのダウンジャケットも、ショート丈なら低身 <br> 長さんでも取り入れやすい。上半身のボリュームを、Iライン <br> を意識したニットワンピースで膨れてみえないようバランス <br> を調整。
+          ビッグシルエットのダウンジャケットも、ショート丈なら低身<br class="pcbr">長さんでも取り入れやすい。上半身のボリュームを、Iライン<br class="pcbr">を意識したニットワンピースで膨れてみえないようバランス<br class="pcbr">を調整。
         </p>
         <p class="price roboto">
           <span class="price_span">Coat 19,800yen+tax </span>
