pc形にはなったけどbodyが中央によってくれない

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </div>
       <div class="descri">
         <p class="setumei yu_go">
-          高身長さんはボリュームのあるダウンジャケット×フレアなA<br class="pcbr">ラインも、好バランスで着こなせる。全体的に同じトーンで合<br class="pcbr">わせ、今年っぽくこなれ感を演出。
+          高身長さんはボリュームのあるダウンジャケット×フレアなAラインも、好バランスで着こなせる。全体的に同じトーンで合わせ、今年っぽくこなれ感を演出。
         </p>
         <p class="price roboto">
           <span class="price_span">Coat 19,800yen+tax</span>
@@ -106,7 +106,7 @@
       </div>
       <div class="descri">
         <p class="setumei yu_go">
-          ビッグシルエットのダウンジャケットも、ショート丈なら低身<br class="pcbr">長さんでも取り入れやすい。上半身のボリュームを、Iライン<br class="pcbr">を意識したニットワンピースで膨れてみえないようバランス<br class="pcbr">を調整。
+          ビッグシルエットのダウンジャケットも、ショート丈なら低身長さんでも取り入れやすい。上半身のボリュームを、Iラインを意識したニットワンピースで膨れてみえないようバランスを調整。
         </p>
         <p class="price roboto">
           <span class="price_span">Coat 19,800yen+tax </span>
