3つ目のふくまで完了いい感じ

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     </h1>
   </div>
 
-  <div class="section_midasi">
+  <!-- French Short Down -->
+  <div class="section1 section_midasi">
     <h1 class="sech1 roboto">
       French Short Down
     </h1>
@@ -43,8 +44,7 @@
       サイドのドローストリングでシルエットの変化が楽しめる。
     </p>
   </div>
-
-  <div class="section_model">
+  <div class="section1 section_model">
     <div class="tall">
       <div class="modelimg_tall">
         <ul class="slide sp_slide">
@@ -116,7 +116,176 @@
       </div>
     </div>
   </div>
+  <!-- /French Short Down -->
 
+  <!-- Cotton Shirt Dress -->
+  <div class="section2 section_midasi">
+    <h1 class="sech1 roboto">
+      Cotton Shirt Dress
+    </h1>
+    <img src="img/sp_img/img08.jpg" alt="Cotton Shirt Dress" class="sp_img08 spimg">
+    <img src="img/pc_img/img08.jpg" alt="Cotton Shirt Dress" class="pc_img08 pcimg">
+    <p class="secp yu_go">
+      「SNIDEL」定番人気のシャツワンピースは、 <br> チェック柄でより秋冬らしいムードを演出。<br> Vネックや立体的なパフスリーブが全体を女性らしく、 <br class="spbr"> エレガントな雰囲気に。<br> 腰位置高めのウエスト切り替えでスタイルアップ。
+    </p>
+  </div>
+  <div class="section2 section_model">
+    <div class="tall">
+      <div class="modelimg_tall">
+        <ul class="slide sp_slide">
+          <li>
+            <img src="img/sp_img/img09.png" alt="Cotton Shirt Dress167㎝着用イメージ1" class="spimg sp_img09">
+          </li>
+          <li>
+            <img src="img/sp_img/img10.png" alt="Cotton Shirt Dress167㎝着用イメージ2" class="spimg sp_img10">
+          </li>
+        </ul>
+        <ul class="slide pc_slide">
+          <li>
+            <img src="img/pc_img/img09.png" alt="Cotton Shirt Dress167㎝着用イメージ1" class="pcimg pc_img07">
+          </li>
+          <li>
+            <img src="img/pc_img/img10.png" alt="Cotton Shirt Dress167㎝着用イメージ2" class="pcimg pc_img10">
+          </li>
+        </ul>
+        <div class="slidemidasi_tall">
+          <p class="tallmidasi roboto">Tall <span class="cm roboto">167cm</span></p>
+          <p class="size roboto">SIZE 1</p>
+        </div>
+      </div>
+      <div class="descri">
+        <p class="setumei yu_go">
+          高身長さんならワンピースのレイヤードスタイルも楽しめます。付属のベルトもあえてゆるく結び力の抜けたコーディネートに。
+        </p>
+        <p class="price roboto">
+          <span class="price_span">Dress 14,200yen+tax</span>
+          <span class="price_span">Pants 13,500yen+tax</span><br class="spbr">
+          <span class="price_span">Shoes 12,500yen+tax</span>
+        </p>
+      </div>
+    </div>
+
+    <div class="short">
+      <div class="modelimg_short">
+        <ul class="slide sp_slide">
+          <li>
+            <img src="img/sp_img/img11.png" alt="Cotton Shirt Dress152㎝着用イメージ1" class="spimg sp_img11">
+          </li>
+          <li>
+            <img src="img/sp_img/img12.png" alt="Cotton Shirt Dress152㎝着用イメージ2" class="spimg sp_img12">
+          </li>
+        </ul>
+        <ul class="slide pc_slide">
+          <li>
+            <img src="img/pc_img/img11.png" alt="Cotton Shirt Dress152㎝着用イメージ1" class="pcimg pc_img11">
+          </li>
+          <li>
+            <img src="img/pc_img/img12.png" alt="Cotton Shirt Dress152㎝着用イメージ2" class="pcimg pc_img12">
+          </li>
+        </ul>
+        <div class="slidemidasi_short">
+          <p class="shortmidasi roboto">Short <span class="cm roboto">152cm</span></p>
+          <p class="size_short roboto">SIZE 0</p>
+        </div>
+      </div>
+      <div class="descri">
+        <p class="setumei yu_go">
+          きゅっとウエストリボンでマークすることにより、縦長にみえるようなメリハリをつくる。足元には白のブーツで軽やかな印象に仕上げて。
+        </p>
+        <p class="price roboto">
+          <span class="price_span">Dress 14,200yen+tax</span>
+          <span class="price_span">Bag 12,000yen+tax</span><br class="spbr">
+          <span class="price_span">Shoes 13,500yen+tax</span>
+        </p>
+      </div>
+    </div>
+  </div>
+  <!-- /Cotton Shirt Dress -->
+
+  <!-- Shirt Set Over Knit Vest -->
+  <div class="section3 section_midasi">
+    <h1 class="sech1 roboto">
+      Shirt Set Over Knit Vest
+    </h1>
+    <img src="img/sp_img/img13.jpg" alt="Cotton Shirt Dress" class="sp_img13 spimg">
+    <img src="img/pc_img/img13.jpg" alt="Cotton Shirt Dress" class="pc_img13 pcimg">
+    <p class="secp yu_go">
+      スタンドカラーシャツとニットベストのセットアイテム。 <br>身体を華奢に魅せるオーバーサイズシャツが嬉しい。 <br> シャツとベストがセパレート仕様なので、<br> それぞれ別のコーディネートもお楽しみいただけます。
+    </p>
+  </div>
+  <div class="section3 section_model">
+    <div class="tall">
+      <div class="modelimg_tall">
+        <ul class="slide sp_slide">
+          <li>
+            <img src="img/sp_img/img01.png" alt="Shirt Set Over Knit Vest167㎝着用イメージ1" class="spimg sp_img01">
+          </li>
+          <li>
+            <img src="img/sp_img/img14.png" alt="Shirt Set Over Knit Vest167㎝着用イメージ2" class="spimg sp_img14">
+          </li>
+        </ul>
+        <ul class="slide pc_slide">
+          <li>
+            <img src="img/pc_img/img01.png" alt="Shirt Set Over Knit Vest167㎝着用イメージ1" class="pcimg pc_img01">
+          </li>
+          <li>
+            <img src="img/pc_img/img14.png" alt="Shirt Set Over Knit Vest167㎝着用イメージ2" class="pcimg pc_img14">
+          </li>
+        </ul>
+        <div class="slidemidasi_tall">
+          <p class="tallmidasi roboto">Tall <span class="cm roboto">167cm</span></p>
+          <p class="size roboto">SIZE F</p>
+        </div>
+      </div>
+      <div class="descri">
+        <p class="setumei yu_go">
+          上下どちらもボリュームのあるゆったりシルエットは、高身長さんこそ似合うおすすめの着こなし。女性らしい柔らかいトーンに足元はパイソン柄ブーツを合わせてバランスよく仕上げて。 
+        </p>
+        <p class="price roboto">
+          <span class="price_span">Shirt with knit 14,500yen+tax</span>
+          <span class="price_span">Skirt 11,800yen+tax</span><br class="spbr">
+          <span class="price_span">Shoes 15,000yen+tax</span>
+        </p>
+      </div>
+    </div>
+
+    <div class="short">
+      <div class="modelimg_short">
+        <ul class="slide sp_slide">
+          <li>
+            <img src="img/sp_img/img02.png" alt="Shirt Set Over Knit Vest152㎝着用イメージ1" class="spimg sp_img02">
+          </li>
+          <li>
+            <img src="img/sp_img/img15.png" alt="Shirt Set Over Knit Vest152㎝着用イメージ2" class="spimg sp_img15">
+          </li>
+        </ul>
+        <ul class="slide pc_slide">
+          <li>
+            <img src="img/pc_img/img02.png" alt="Shirt Set Over Knit Vest152㎝着用イメージ1" class="pcimg pc_img02">
+          </li>
+          <li>
+            <img src="img/pc_img/img15.png" alt="Shirt Set Over Knit Vest152㎝着用イメージ2" class="pcimg pc_img15">
+          </li>
+        </ul>
+        <div class="slidemidasi_short">
+          <p class="shortmidasi roboto">Short <span class="cm roboto">152cm</span></p>
+          <p class="size_short roboto">SIZE F</p>
+        </div>
+      </div>
+      <div class="descri">
+        <p class="setumei yu_go">
+          ビッグシルエットのシャツベストセットは低身長さんならワンピースのように着こなすことが可能。子供っぽくないよう、パイソン柄のブーツで適度なスパイスと女性らしさをプラスして。
+        </p>
+        <p class="price roboto">
+          <span class="price_span">Shirt with knit 14,500yen+tax</span>
+          <span class="price_span">Skirt 9,000yen+tax</span><br class="spbr">
+          <span class="price_span">Bag 6,800yen+tax</span><br class="pcbr">
+          <span class="price_span">Shoes 15,000yen+tax</span>
+        </p>
+      </div>
+    </div>
+  </div>
+  <!-- /Shirt Set Over Knit Vest -->
 
 
 
