--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="icon" href="img/favicon.ico" />
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnectss" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="slick-1.8.1/slick/slick.css">
   <link rel="stylesheet" href="slick-1.8.1/slick/slick-theme.css">
 </head>
@@ -126,7 +128,8 @@
     <img src="img/sp_img/img08.jpg" alt="Cotton Shirt Dress" class="sp_img08 spimg">
     <img src="img/pc_img/img08.jpg" alt="Cotton Shirt Dress" class="pc_img08 pcimg">
     <p class="secp yu_go">
-      「SNIDEL」定番人気のシャツワンピースは、 <br> チェック柄でより秋冬らしいムードを演出。<br> Vネックや立体的なパフスリーブが全体を女性らしく、 <br class="spbr"> エレガントな雰囲気に。<br> 腰位置高めのウエスト切り替えでスタイルアップ。
+      「SNIDEL」定番人気のシャツワンピースは、 <br> チェック柄でより秋冬らしいムードを演出。<br> Vネックや立体的なパフスリーブが全体を女性らしく、 <br class="spbr"> エレガントな雰囲気に。<br>
+      腰位置高めのウエスト切り替えでスタイルアップ。
     </p>
   </div>
   <div class="section2 section_model">
@@ -239,7 +242,7 @@
       </div>
       <div class="descri">
         <p class="setumei yu_go">
-          上下どちらもボリュームのあるゆったりシルエットは、高身長さんこそ似合うおすすめの着こなし。女性らしい柔らかいトーンに足元はパイソン柄ブーツを合わせてバランスよく仕上げて。 
+          上下どちらもボリュームのあるゆったりシルエットは、高身長さんこそ似合うおすすめの着こなし。女性らしい柔らかいトーンに足元はパイソン柄ブーツを合わせてバランスよく仕上げて。
         </p>
         <p class="price roboto">
           <span class="price_span">Shirt with knit 14,500yen+tax</span>
@@ -287,6 +290,93 @@
   </div>
   <!-- /Shirt Set Over Knit Vest -->
 
+  <!-- Scale Cashmere Coat -->
+  <div class="section4 section_midasi">
+    <h1 class="sech1 roboto">
+      Scale Cashmere Coat
+    </h1>
+    <img src="img/sp_img/img16.jpg" alt="Scale Cashmere Coat" class="sp_img16 spimg">
+    <img src="img/pc_img/img16.jpg" alt="Scale Cashmere Coat" class="pc_img16 pcimg">
+    <p class="secp yu_go">
+      しなやかでしっとりとした肌触りと、 <br> 表面の艶やかなウロコ調模様が特徴の<br class="spbr">「SNIDEL」オリジナル生地で仕立てたロングコート。 <br>
+      品の良いトレンチライクなデザインをベースに、<br> 袖の折り返しや大きなポケットでアクセントを添えました。
+    </p>
+  </div>
+  <div class="section4 section_model">
+    <div class="tall">
+      <div class="modelimg_tall">
+        <ul class="slide sp_slide">
+          <li>
+            <img src="img/sp_img/img17.png" alt="Scale Cashmere Coat167㎝着用イメージ1" class="spimg sp_img17">
+          </li>
+          <li>
+            <img src="img/sp_img/img18.png" alt="Scale Cashmere Coat167㎝着用イメージ2" class="spimg sp_img18">
+          </li>
+        </ul>
+        <ul class="slide pc_slide">
+          <li>
+            <img src="img/pc_img/img17.png" alt="Scale Cashmere Coat167㎝着用イメージ1" class="pcimg pc_img17">
+          </li>
+          <li>
+            <img src="img/pc_img/img18.png" alt="Scale Cashmere Coat167㎝着用イメージ2" class="pcimg pc_img18">
+          </li>
+        </ul>
+        <div class="slidemidasi_tall">
+          <p class="tallmidasi roboto">Tall <span class="cm roboto">167cm</span></p>
+          <p class="size roboto">SIZE 1</p>
+        </div>
+      </div>
+      <div class="descri">
+        <p class="setumei yu_go">
+          ロングコートにパンツを合わせ、縦のラインを強調したコーディネートを着こなせるのは高身長さんならでは。中は同系色で合わせ、大人っぽい旬なスタイリングに。
+        </p>
+        <p class="price roboto">
+          <span class="price_span">Coat 39,400yen+tax</span>
+          <span class="price_span">Knit 7,200yen+tax</span><br class="spbr">
+          <span class="price_span">Pants 11,000yen+tax</span>
+          <br class="pcbr">
+          <span class="price_span">Bag 15,000yen+tax</span>
+          <br class="spbr">
+          <span class="price_span">Shoes 13,500yen+tax</span>
+        </p>
+      </div>
+    </div>
+
+    <div class="short">
+      <div class="modelimg_short">
+        <ul class="slide sp_slide">
+          <li>
+            <img src="img/sp_img/img19.png" alt="Scale Cashmere Coat152㎝着用イメージ1" class="spimg sp_img19">
+          </li>
+          <li>
+            <img src="img/sp_img/img20.png" alt="Scale Cashmere Coat152㎝着用イメージ2" class="spimg sp_img20">
+          </li>
+        </ul>
+        <ul class="slide pc_slide">
+          <li>
+            <img src="img/pc_img/img19.png" alt="Scale Cashmere Coat152㎝着用イメージ1" class="pcimg pc_img19">
+          </li>
+          <li>
+            <img src="img/pc_img/img20.png" alt="Scale Cashmere Coat152㎝着用イメージ2" class="pcimg pc_img20">
+          </li>
+        </ul>
+        <div class="slidemidasi_short">
+          <p class="shortmidasi roboto">Short <span class="cm roboto">152cm</span></p>
+          <p class="size_short roboto">SIZE 0</p>
+        </div>
+      </div>
+      <div class="descri">
+        <p class="setumei yu_go">
+          ワンピースの適度なボリューム感がコートに負けないバランスをキープして、低身長さんもすらりと見えるシルエットに。 Iラインを意識することでロング丈のコートもすっきりと着こなせます。
+        </p>
+        <p class="price roboto">
+          <span class="price_span">Coat 39,400yen+tax</span>
+          <span class="price_span">Dress 15,000yen+tax</span>
+        </p>
+      </div>
+    </div>
+  </div>
+  <!-- /Scale Cashmere Coat -->
 
 
   <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.5.1.min.js"></script>
