--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
       <img src="img/pc_img/img21.jpg" alt="Back Design Denim" class="pc_img21 pcimg">
     </div>
     <p class="secp yu_go f18px" id="f15px">
-      「SNIDEL」定番人気のバックレースアップデニム。<br>レースアップに細いリボンを使用することで、より女性らしい印象へとアップデート。<br>裾にかけてフレアに広がるワイドシルエットとセンタープレスが、<br>縦の流れを強調しスタイルアップに貢献します。
+      「SNIDEL」定番人気のバックレースアップデニム。<br>レースアップに細いリボンを使用することで、<br class="spbr"> より女性らしい印象へとアップデート。<br>裾にかけてフレアに広がるワイドシルエットとセンタープレスが、<br>縦の流れを強調しスタイルアップに貢献します。
     </p>
   </div>
   <div class="section5 section_model">
@@ -485,7 +485,7 @@
       <img src="img/pc_img/img26.jpg" alt="Pleated Jumper Skirt Dress" class="pc_img26 pcimg">
     </div>
     <p class="secp yu_go f18px" id="f15px">
-      定番人気のジャンパースカート型ワンピースを秋冬気分にアップデート。<br>高めのウエスト切り替えでスタイルアップを叶え、<br>共布の太ベルトを長めに垂らすことでモードなエッセンスを新たに加えました。<br>アシンメトリーデザインのインパクトあるスカートは存在感抜群。
+      定番人気のジャンパースカート型ワンピースを<br class="spbr">秋冬気分にアップデート。<br>高めのウエスト切り替えでスタイルアップを叶え、<br>共布の太ベルトを長めに垂らすことで<br class="spbr">モードなエッセンスを新たに加えました。<br>アシンメトリーデザインの<br class="spbr">インパクトあるスカートは存在感抜群。
     </p>
   </div>
   <div class="section6 section_model">
@@ -642,7 +642,7 @@
         </p>
         <p class="price roboto f16px" id="f15px">
           <span class="price_span">Blouse 13,500yen+tax</span>
-          <span class="price_span">Skirt 14,500yen+tax</span>><br class="spbr">
+          <span class="price_span">Skirt 14,500yen+tax</span><br class="spbr">
           <span class="price_span">Bag 11,000yen+tax</span><br class="pcbr">
           <span class="price_span">Shoes 16,000yen+tax</span>
         </p>
